# jnsn

./: CMakeLists.txt  LICENSE  README.md  TODO
cmake/: format.cmake  gtest-download.cmake.in
include/jnsn/: ast.h  ast_exec.h  ast_ops.h  ast_visitor.h  ast_walker.h  lexer.h  operators.def  parser.h  source_location.h  string_table.h  util.h
include/jnsn/ir/: instructions.def  instructions.h  intrinsics.def  intrinsics.h  ir.h  ir_builder.h  ir_context.h  module.h  printer.h  types.def  types.h  value.h
include/jnsn/js/: ast.def  ast.h  ast_analysis.h  ast_exec.h  ast_name_analysis.h  ast_ops.h  ast_visitor.h  ast_walker.h  ir_construction.h  keywords.def  lexer.h  parser.h
include/parsing/: ast.def  ast.h  ast_exec.h  ast_executor.h  ast_ops.h  ast_visitor.h  ast_walker.h  keywords.def  lexer.h  operators.def  parser.h  source_location.h  string_table.h  tokens.def  util.h
include/parsing/ir/: instructions.def  instructions.h  intrinsics.def  intrinsics.h  ir.h  ir_builder.h  ir_context.h  module.h  types.def  types.h  value.h
lib/: CMakeLists.txt  ast.cc  ast_exec.cc  ast_executor.cc  ast_ops.cc  lexer.cc  main.cc  parser.cc
lib/ir/: CMakeLists.txt  ir.cc  ir_builder.cc  ir_builder_internal.h  ir_context.cc  module.cc  printer.cc
lib/js/: CMakeLists.txt  ast.cc  ast_analysis.cc  ast_analysis_internal.h  ast_exec.cc  ast_name_analysis.cc  ast_ops.cc  ir_construction.cc  ir_construction_internal.h  lexer.cc  parser.cc
unittest/: CMakeLists.txt  ast_ops_test.cc  ast_test.cc  exec_test.cc  gtest_utils.h  ir_test.cc  lex_utils.h  lexer_test.cc  parse_utils.h  parser_test.cc
