set(SOURCES
  lexer.cc
  ast.cc
  ast_ops.cc
  parser.cc
  ast_exec.cc
  ir/ir.cc
  ir/ir_context.cc
  ir/module.cc
  ir/ir_builder.cc
  ../include/jnsn/ast.def
  ../include/jnsn/ast.h
  ../include/jnsn/ast_ops.h
  ../include/jnsn/ast_visitor.h
  ../include/jnsn/ir/instructions.def
  ../include/jnsn/ir/instructions.h
  ../include/jnsn/ir/intrinsics.def
  ../include/jnsn/ir/ir.h
  ../include/jnsn/ir/ir_builder.h
  ../include/jnsn/ir/ir_context.h
  ../include/jnsn/ir/module.h
  ../include/jnsn/ir/types.def
  ../include/jnsn/ir/types.h
  ../include/jnsn/ir/value.h
  ../include/jnsn/keywords.def
  ../include/jnsn/lexer.h
  ../include/jnsn/operators.def
  ../include/jnsn/parser.h
  ../include/jnsn/source_location.h
  ../include/jnsn/string_table.h
  ../include/jnsn/tokens.def
  ../include/jnsn/util.h)

add_library(jnsn
  ${SOURCES})
